--- a/index.html
+++ b/index.html
@@ -16,10 +16,58 @@
   <meta name="theme-color" content="#FFE1C4">
   <style type="text/css">
     
-  #installApp {
-  display: none;
+ 
+.overlay {
+  height: 100%;
+  width: 0%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
 }
-  </style>
+
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+  font-size: 40px;
+  top: 15px;
+  right: 35px;
+  }
+}
+</style>
+
 </head>
 <body class="grey lighten-4">
 
@@ -73,8 +121,12 @@
       </div>
     </form>
   </div>
+    <div id="myNav" class="overlay">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <div class="overlay-content">
     <button id="installApp">Install App</button>
-
+  </div>
+</div>
 
   <script>
     if('serviceWorker' in navigator){
@@ -87,6 +139,7 @@
 
 const installApp = document.getElementById('installApp');
 
+const overlay = document.getElementById('myNav');
 installApp.addEventListener('click', async () => {
     if (deferredPrompt !== null) {
         deferredPrompt.prompt();
@@ -100,7 +153,7 @@ installApp.addEventListener('click', async () => {
 let deferredPrompt;
 
 window.addEventListener('beforeinstallprompt', (e) => {
-    installApp.style.display='block';
+    overlay.style.width='100%';
     deferredPrompt = e;
 });
   </script>
